# bevy_rustysynth

./: Cargo.toml  README.md
src/: assets.rs  lib.rs
src/embedded_assets/: hl4mgm.sf2
