[package]
name = "bevy_rustysynth"
description = "A plugin which adds MIDI file and soundfont audio support to the bevy engine via rustysynth."
version = "0.1.2"
edition = "2021"
license = "0BSD OR MIT OR Apache-2.0"

[dependencies]
rustysynth = "1.3"
itertools = "0.13"
async-channel = "2.3"
rodio = "0.19"

[dependencies.bevy]
version = "0.14"
default-features = false
features = ["bevy_audio", "bevy_asset", "multi_threaded"]

[features]
default = ["hl4mgm"]
hl4mgm = []
